[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {features = ["csr"] }
gloo = "0.8"
js-sys = "0.3"
wasm-bindgen = "0.2"
leptos = { version = "0.4.5", features = ["csr"] }

